# etl_pipeline

./: .gitignore  README.md  config.yaml  pyproject.toml
src/: config.yaml  etl.py  transformer.py
src/utils/: redshift_tables.py  sql.py
tests/: test_etl_pipeline.py
